# vedro-debug-prompt

./: .bumpversion.cfg  .gitignore  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
vedro_debug_prompt/: __init__.py  _debug_prompt.py  _prompt_builder.py
